<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">WonderCoreFit</string>
    <string name="allow_usecamera">Open Camera Permission</string>
    <string name="exit">exit</string>
    <string name="qrscan_require_permission">"Scan requires permission "</string>

    <string name="title_index_home">首页</string>
    <string name="title_index_course">发现</string>
    <string name="title_index_mall">商城</string>
    <string name="title_index_setting">设置</string>

    <string name="kg">kg</string>
    <string name="today_steps">今日步数</string>
    <string name="store_name">健身好店铺</string>
    <string name="mall_product">运动好产品</string>
    <string name="person_information">个人信息</string>
    <string name="about_us">关于我们</string>

    <string name="zero_stepsOne">今天尚未运动，</string>
    <string name="zero_stepsTwo">快去运动一下吧</string>
    <string name="step_distance">步行距离：</string>
    <string name="step_calorie">消耗热量：</string>

    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="stature">身高</string>
    <string name="target_weight">目标体重</string>
    <string name="target_step">目标步数</string>
    <string name="wonder_core">京造运动</string>
    <string name="tos">服务条款</string>
    <string name="disclaimer">免责声明</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="details">详情</string>
    <string name="tmaill_store">天猫旗舰店</string>
    <string name="sports_products">运动好产品</string>
    <string name="weight_found_tips">发现一台秤！当界面数值与秤上显示一致时请点击“确认绑定”，不一致时请点击“重新搜索”哟~</string>
    <string name="research">重新搜索</string>
    <string name="confirm_bond">确认绑定</string>
    <string name="weight_bonded_tip">体脂秤已连接成功，开启你的健康之旅吧！</string>
    <string name="backnow">立即跳转</string>
    <string name="count_down_tips">秒后自动跳转到设备首页</string>
    <string name="tv_current_weight_init_msg">您尚未测量过身体数据，点此测量，了解下自己的身体情况吧！</string>
    <string name="measure_first_tips">您尚未测量过体重哦，点此立即测量！</string>
    <string name="error_ble_off">手机蓝牙未打开!</string>
    <string name="error_location_notallowed">定位权限未打开!</string>
    <string name="error_location_off">定位未打开!</string>
    <string name="ok_ble_env">蓝牙环境ok</string>
    <string name="developping">尚在开发中</string>
    <string name="error_search_timeout">未搜索到设备！</string>
    <string name="goto_measure">去测量</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_name">设备名称</string>
    <string name="device_model">设备型号</string>
    <string name="firmware_version">固件版本</string>
    <string name="delete_device">解除绑定</string>
    <string name="current_weight">当前体重</string>
    <string name="measure_weight">测量体重</string>
    <string name="bond_device">绑定设备</string>
    <string name="device_weight">体脂秤</string>
    <string name="device_wheel">健腹轮</string>
    <string name="weight_measuring">详细数据测量中请稍后</string>
    <string name="unbond_ok">解绑成功</string>
    <string name="please_bond_first">请先绑定设备</string>
    <string name="wheel_bonded_tip">健腹轮已连接成功，开启你的挑战之旅吧！</string>
    <string name="device_connected">已连接</string>
    <string name="device_disconnected">未连接</string>
    <string name="device_connecting">连接中</string>
    <string name="network_error">网络异常</string>
    <string name="device_my_device">我的设备</string>
    <string name="device_device_name">设备名称</string>
    <string name="device_device_model">设备型号</string>
    <string name="device_device_address">Mac地址</string>
    <string name="device_device_hardware">固件版本</string>
    <string name="device_device_delete">解除绑定</string>
    <string name="device_horizontalbar">单杠</string>
    <string name="device_pushup">俯卧撑板</string>
    <string name="device_counter">计数器</string>
    <string name="rope_skipper_rd">燃动跳绳</string>
    <string name="rope_skipper_bbt">棒棒糖跳绳</string>

    <string name="feedback">意见和反馈</string>
    <string name="feedback_errorTime">问题出现时间</string>
    <string name="feedback_selectedData">请选择日期</string>
    <string name="feedback_selectedTime">请选择时间</string>
    <string name="feedback_phone">联系人手机号</string>
    <string name="feedback_selectedPhone">请输入手机号</string>
    <string name="feedback_content">反馈内容</string>
    <string name="feedback_selectedContent">请输入反馈内容</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_history">反馈记录</string>
    <string name="byCount">计数模式</string>
    <string name="byTime">计时模式%ds</string>
    <string name="byFree">自由模式</string>
    <string name="byCountTime">倒计时模式</string>
    <string name="byCountNumber">倒计数模式</string>

    <string name="statistics_week">周</string>
    <string name="statistics_month">月</string>
    <string name="statistics_unit">次</string>
    <string name="statistics_title">数据统计</string>
    <string name="statistics_historyData">历史次数</string>
    <string name="statistics_number">运动次数</string>
    <string name="lowpower_error">设备电量已低于%d%%，请及时更换电池</string>
    <string name="pause_exercise">暂停训练</string>
    <string name="resume_exercise">继续训练</string>
    <string name="connect_device">连接设备</string>
    <string name="cancel_connect">取消连接</string>
    <string name="start_exercise">开始训练</string>


</resources>