<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/icon_weight_bonded" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img1"
            android:layout_alignStart="@+id/img1"
            android:layout_alignEnd="@+id/img1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/weight_bonded_tip"
            android:textColor="#333333"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/countdownTv"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:layout_alignStart="@+id/tv1"
            android:layout_alignEnd="@+id/tv1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/count_down_tips"
            android:textColor="#333333"
            android:textSize="13sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countdownTv"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ble_bonded_backnow_frame"
            android:text="@string/backnow"
            android:textColor="#fff2682a" />
    </RelativeLayout>
</RelativeLayout>