<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:visibility="visible">

        <ImageView
            android:id="@+id/found_img"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/icon_weight_found" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/found_weight"
            android:layout_width="48dp"
            android:layout_height="21dp"
            android:layout_below="@id/found_img"
            android:layout_alignStart="@id/found_img"
            android:layout_alignTop="@id/found_img"
            android:layout_alignEnd="@id/found_img"
            android:layout_alignBottom="@+id/found_img"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="89dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="154dp"
            android:gravity="center"
            android:textColor="#333333"
            android:textSize="12sp"
            tools:text="88.8kg" />

        <TextView
            android:id="@+id/fond_tip"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/found_img"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/weight_found_tips"
            android:textColor="#333333"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/fond_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fond_tip"
            android:layout_alignStart="@id/found_img"
            android:layout_alignEnd="@id/found_img"
            android:divider="#E0E0E0"
            android:gravity="center"
            android:showDividers="middle">

            <TextView
                android:id="@+id/research"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/research"
                android:textColor="#8B8C8D"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/bond"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm_bond"
                android:textColor="@color/color_e1251b"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/fond_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fond_btns"
            android:layout_alignStart="@id/found_img"
            android:layout_alignEnd="@+id/found_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="#333333"
            android:textSize="13sp"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>